<resources>
    <string name="app_name">Registro</string>
    <string name="tvTitulo">Gestión de usuario</string>
    <string name="etDocumento">Ingrese el Documento</string>
    <string name="etUsuario">Ingrese el Usuario</string>
    <string name="etNombres">Ingrese los Apellidos</string>
    <string name="etContraseñas">Ingrese la Contraseña</string>

    <!--Botones-->
    <string name="btnRegistrar">Guardar</string>
    <string name="btnBuscar">Buscar</string>
    <string name="btnListar">Listar</string>
    <string name="btnBorrar">Borrar</string>
</resources>